Local mock for metrics reports
